--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+:root {
+  --color-secondy: #0f5ccc,
+  --color-primary: #c613ec,
+  --color-accent: #cc0f49,
+  --color-white: #f5f5f5,
+}
+
 *,
 *::after,
 *::before {
@@ -12,25 +19,47 @@ html {
 
 body {
   font-family: "Noto Sans", Arial, Helvetica, sans-serif;
-  font-size: 2rem;
+  font-size: 1.4rem;
   background: #0f0112;
   color: #fff;
 }
 
 h1 {
-  font-size: 7rem;
+  font-size: 3rem;
 }
 
 h2 {
-  font-size: 4rem;
+  font-size: 2rem;
 }
 
 h3 {
-  font-size: 3rem;
+  font-size: 1.8rem;
   font-weight: 500;
 }
 
+@media screen and (min-width:768px) {
+
+  h1 {
+    font-size: 7rem;
+  }
+  
+  h2 {
+    font-size: 4rem;
+  }
+  
+  h3 {
+    font-size: 3rem;
+    font-weight: 500;
+  }
+
+  body {
+    font-size: 2rem;
+  }
+  
+}
+
 .span-gradient {
+  background: rgb(15,92,204);
   background: linear-gradient(
     25deg,
     rgba(15, 92, 204, 1) 0%,
@@ -38,4 +67,34 @@ h3 {
   );
   color: transparent;
   background-clip: text;
+}
+
+/* Links */
+
+a{
+  text-decoration: none;
+}
+
+.link-arrow{
+  font-size: 2rem;
+  letter-spacing: 1px;
+  color: var(--color-white);
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.link-arrow::after{
+  content: "➡";
+  margin-left: 5px;
+  transition: margin .15s linear
+}
+
+.link-arrow:hover::after{
+  margin-left: 15px;
+}
+
+@media screen and (min-width:768px) {
+  .link-arrow{
+    font-size: 2.5rem
+  }
 }
