--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
+@font-face {
+  font-family: "gelio-greek-diner";
+  src: url("fonts/gelio_greek_diner-webfont.woff2"),
+    url("fonts/gelio_greek_diner-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 :root {
-  --color-secondy: #0f5ccc,
-  --color-primary: #c613ec,
-  --color-accent: #cc0f49,
-  --color-white: #f5f5f5,
+  --color-secondary: #0f5ccc;
+  --color-primary: #c613ec;
+  --color-white: #f5f5f5;
+  --color-accent: #9f0647;
 }
 
 *,
@@ -21,7 +29,7 @@ body {
   font-family: "Noto Sans", Arial, Helvetica, sans-serif;
   font-size: 1.4rem;
   background: #0f0112;
-  color: #fff;
+  color: var(--color-white);
 }
 
 h1 {
@@ -37,16 +45,15 @@ h3 {
   font-weight: 500;
 }
 
-@media screen and (min-width:768px) {
-
+@media screen and (min-width: 768px) {
   h1 {
     font-size: 7rem;
   }
-  
+
   h2 {
     font-size: 4rem;
   }
-  
+
   h3 {
     font-size: 3rem;
     font-weight: 500;
@@ -55,11 +62,10 @@ h3 {
   body {
     font-size: 2rem;
   }
-  
 }
 
 .span-gradient {
-  background: rgb(15,92,204);
+  background: rgb(15, 92, 204);
   background: linear-gradient(
     25deg,
     rgba(15, 92, 204, 1) 0%,
@@ -71,11 +77,11 @@ h3 {
 
 /* Links */
 
-a{
+a {
   text-decoration: none;
 }
 
-.link-arrow{
+.link-arrow {
   font-size: 2rem;
   letter-spacing: 1px;
   color: var(--color-white);
@@ -83,18 +89,63 @@ a{
   text-transform: uppercase;
 }
 
-.link-arrow::after{
+.link-arrow::after {
   content: "➡";
   margin-left: 5px;
-  transition: margin .15s linear
+  transition: margin 0.15s linear;
 }
 
-.link-arrow:hover::after{
+.link-arrow:hover::after {
   margin-left: 15px;
 }
 
-@media screen and (min-width:768px) {
-  .link-arrow{
-    font-size: 2.5rem
+@media screen and (min-width: 768px) {
+  .link-arrow {
+    font-size: 2.5rem;
   }
+}
+
+/* Buttons */
+
+.btn {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: var(--color-white);
+  padding: 1rem 2.5rem;
+  cursor: pointer;
+  margin: 0.5rem;
+  text-transform: uppercase;
+}
+
+.btn--outline {
+  border: 1px solid var(--color-accent);
+  background: transparent;
+  border-radius: 10px;
+  transition: background-color 0.15s linear;
+}
+
+.btn--outline:hover {
+  background-color: var(--color-accent);
+}
+
+.btn--outline--right {
+  border-radius: 30px 0px;
+}
+
+.btn--outline--left {
+  border-radius: 0px 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .btn {
+    font-size: 1.6rem;
+  }
+}
+
+.brand {
+  font-family: "gelio-greek-diner";
+  letter-spacing: 7px;
+  font-size: 4rem;
+  display: inline-block;
+  margin: 0 2rem;
 }
