Build collapsible component

--- a/src/components/buttons.html
+++ b/src/components/buttons.html
@@ -3,3 +3,4 @@
 <button className="btn btn--outline btn--outline--left">
   {" "} get started
 </button>
+<button className="btn btn--gradient">start</button>
