--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   --color-primary: #c613ec;
   --color-white: #f5f5f5;
   --color-accent: #9f0647;
+  --color-background: #0f0112;
 }
 
 *,
@@ -28,7 +29,6 @@ html {
 body {
   font-family: "Noto Sans", Arial, Helvetica, sans-serif;
   font-size: 1.4rem;
-  background: #0f0112;
   color: var(--color-white);
 }
 
@@ -111,7 +111,7 @@ a {
   font-size: 1.2rem;
   font-weight: 600;
   color: var(--color-white);
-  padding: 1rem 2.5rem;
+  padding: 1rem 3rem;
   cursor: pointer;
   margin: 0.5rem;
   text-transform: uppercase;
@@ -136,13 +136,84 @@ a {
   border-radius: 0px 30px;
 }
 
+.btn--gradient {
+  background: rgb(15, 92, 204);
+  background: linear-gradient(
+    25deg,
+    rgba(15, 92, 204, 1) 0%,
+    rgba(198, 19, 236, 1) 95%
+  );
+  border: none;
+  border-radius: 20px;
+}
+
 @media screen and (min-width: 768px) {
   .btn {
-    font-size: 1.6rem;
+    font-size: 2rem;
   }
 }
 
-.brand {
+/* Lists */
+
+.list {
+  list-style: none;
+  padding-left: 0;
+}
+
+/* Icons */
+
+.icon {
+  width: 50px;
+}
+
+/* Collapsibles */
+.collapsible__header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.collapsible__heading {
+  margin: 0;
+}
+
+.collapsible__content {
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0.5;
+  transform: all 0.3s linear;
+}
+
+.collapsible .collapsible__chevron {
+  transform: rotate(90deg);
+}
+
+.collapsible--expanded .collapsible__content {
+  max-height: 100%;
+  opacity: 1;
+}
+
+.collapsible--expanded .collapsible__chevron {
+  transform: rotate(0);
+}
+
+/* Nav */
+
+.nav {
+  background: #31033b;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.nav__item {
+  padding: 0.5rem 2rem;
+}
+.nav__list {
+  width: 100%;
+  margin: 0;
+}
+
+.logo__text {
   font-family: "gelio-greek-diner";
   letter-spacing: 7px;
   font-size: 4rem;
