--- a/src/App.css
+++ b/src/App.css
@@ -198,6 +198,11 @@ a {
 
 /* Nav */
 
+.nav-container {
+  background: rgba(11, 1, 24, 1);
+  padding: 1.5rem 2rem;
+}
+
 .nav {
   display: flex;
   justify-content: space-between;
@@ -211,7 +216,7 @@ a {
 }
 
 .nav__item > a {
-  color: #d2d0db;
+  color: #cdd7eb;
   font-size: 3rem;
   font-weight: 600;
 }
@@ -232,11 +237,11 @@ a {
 }
 
 .nav__burger {
-  color: #d2d0db;
+  color: #adbbd7;
   border-radius: 5px;
   opacity: 0.5;
   cursor: pointer;
-  border: 2px solid #d2d0db;
+  border: 2px solid #adbbd7;
 }
 
 .nav.collapsible--expanded .nav__burger {
@@ -250,6 +255,16 @@ a {
   font-size: 4rem;
   display: inline-block;
   margin: 0 1rem;
+
+  background: rgb(205, 215, 235);
+  background: linear-gradient(
+    0deg,
+    rgba(205, 215, 235, 1) 24%,
+    rgba(173, 187, 215, 1) 75%
+  );
+
+  color: transparent;
+  background-clip: text;
 }
 
 .logo__img {
@@ -311,7 +326,7 @@ a {
   }
 
   .grid.hero {
-    margin-top: 20rem;
+    margin-top: 10rem;
   }
 }
 
@@ -329,12 +344,11 @@ a {
 }
 
 .block--gradient {
-  height: 100vh;
   background: rgb(37, 20, 108);
   background: linear-gradient(
     0deg,
     rgba(37, 20, 108, 1) 33%,
-    rgba(11, 1, 24, 1) 80%
+    rgba(11, 1, 24, 1) 90%
   );
 }
 
